EAX-116 - Log widget added.

--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file>images/edit-clear.png</file>
         <file>images/open.png</file>
         <file>images/save.png</file>
         <file>images/undo.png</file>
