--- a/src/ui/createchunkdialog.ui
+++ b/src/ui/createchunkdialog.ui
@@ -84,20 +84,14 @@
      <item row="5" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QSpinBox" name="beginSpinBox">
-         <property name="maximum">
-          <number>2147483647</number>
-         </property>
+        <widget class="veles::ui::SpinBox" name="beginSpinBox">
          <property name="displayIntegerBase">
           <number>16</number>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QSpinBox" name="endSpinBox">
-         <property name="maximum">
-          <number>2147483647</number>
-         </property>
+        <widget class="veles::ui::SpinBox" name="endSpinBox">
          <property name="displayIntegerBase">
           <number>16</number>
          </property>
@@ -112,6 +106,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>veles::ui::SpinBox</class>
+   <extends>QSpinBox</extends>
+   <header location="global">ui/spinbox.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>nameEdit</tabstop>
   <tabstop>typeBox</tabstop>
