--- a/src/visualisation/shaders/shaders.qrc
+++ b/src/visualisation/shaders/shaders.qrc
@@ -10,5 +10,9 @@
 		<file>digram/fshader.glsl</file>
 		<file>trigram/vshader.glsl</file>
 		<file>trigram/fshader.glsl</file>
+		<file>trigram/label_vshader.glsl</file>
+		<file>trigram/label_fshader.glsl</file>
+		<file>trigram/rf_vshader.glsl</file>
+		<file>trigram/rf_fshader.glsl</file>
 	</qresource>
 </RCC>
