[EAX-136] Dock widget can be detached to a new top level window (optionally maximized) through a key/sequence or a context menu.

--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -31,5 +31,6 @@
         <file>images/label_N0.png</file>
         <file>images/show_node_tree.png</file>
         <file>images/show_hex_edit.png</file>
+        <file>images/maximize.png</file>
     </qresource>
 </RCC>
