--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -29,6 +29,10 @@
         <file>images/label_three.png</file>
         <file>images/label_pos.png</file>
         <file>images/label_N0.png</file>
+        <file>images/label_zero_digram.png</file>
+        <file>images/label_one_digram.png</file>
+        <file>images/label_two_digram.png</file>
+        <file>images/label_N0_digram.png</file>
         <file>images/show_node_tree.png</file>
         <file>images/show_hex_edit.png</file>
     </qresource>
