--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -37,5 +37,7 @@
         <file>images/digram_icon.svg</file>
         <file>images/trigram_icon.svg</file>
         <file>images/layered_digram_icon.svg</file>
+        <file>images/split_horizontally.png</file>
+        <file>images/split_vertically.png</file>
     </qresource>
 </RCC>
