HexEditWidget and NodeTreeWidget merged into single tab.
Features related to interactions between minimap and hex view
are out of the scope of this commit.

--- a/resources/veles.qrc
+++ b/resources/veles.qrc
@@ -32,6 +32,7 @@
         <file>images/label_two_digram.png</file>
         <file>images/label_N0_digram.png</file>
         <file>images/show_node_tree.png</file>
+        <file>images/show_minimap.png</file>
         <file>images/show_hex_edit.png</file>
         <file>images/maximize.png</file>
         <file>images/digram_icon.png</file>
