Fixed stdout redirection from Python interpreter

--- a/src/ui/connectiondialog.ui
+++ b/src/ui/connectiondialog.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Connect...</string>
+   <string>Connect</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
