--- a/src/ui/connectiondialog.ui
+++ b/src/ui/connectiondialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>611</width>
-    <height>371</height>
+    <height>445</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -124,6 +124,13 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="server_host_line_edit">
+       <property name="placeholderText">
+        <string>Host name or address</string>
+       </property>
+      </widget>
+     </item>
      <item row="3" column="1">
       <widget class="QLineEdit" name="key_line_edit">
        <property name="placeholderText">
@@ -131,10 +138,10 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="server_host_line_edit">
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="database_line_edit">
        <property name="placeholderText">
-        <string>Host name or address</string>
+        <string>Database file for a new server</string>
        </property>
       </widget>
      </item>
@@ -145,10 +152,10 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="database_line_edit">
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="client_interface_line_edit">
        <property name="placeholderText">
-        <string>Database file for a new server</string>
+        <string>Client network interface</string>
        </property>
       </widget>
      </item>
@@ -195,13 +202,6 @@
        </item>
       </layout>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="client_interface_line_edit">
-       <property name="placeholderText">
-        <string>Client network interface</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="2">
       <widget class="QPushButton" name="server_localhost_button">
        <property name="text">
@@ -209,17 +209,17 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
-      <widget class="QPushButton" name="select_database_button">
-       <property name="text">
-        <string>browse...</string>
-       </property>
-      </widget>
-     </item>
      <item row="6" column="1">
       <widget class="QLineEdit" name="server_executable_line_edit">
        <property name="placeholderText">
         <string>Server Python script</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="2">
+      <widget class="QPushButton" name="select_database_button">
+       <property name="text">
+        <string>browse...</string>
        </property>
       </widget>
      </item>
@@ -251,7 +251,7 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0" colspan="3">
+     <item row="8" column="0" colspan="3">
       <widget class="QCheckBox" name="shut_down_server_check_box">
        <property name="text">
         <string>Shut down the server on application termination</string>
@@ -260,6 +260,63 @@
         <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="9" column="0" colspan="3">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0,5,0">
+       <item>
+        <widget class="QCheckBox" name="save_settings_check_box">
+         <property name="text">
+          <string>Save my settings</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_7">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="save_key_check_box">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>...and my secret key</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="load_defaults_button">
+         <property name="text">
+          <string>Load default values</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
@@ -340,6 +397,10 @@
   <tabstop>select_database_button</tabstop>
   <tabstop>server_executable_line_edit</tabstop>
   <tabstop>select_server_executable_button</tabstop>
+  <tabstop>shut_down_server_check_box</tabstop>
+  <tabstop>save_settings_check_box</tabstop>
+  <tabstop>save_key_check_box</tabstop>
+  <tabstop>load_defaults_button</tabstop>
   <tabstop>ok_button</tabstop>
   <tabstop>cancel_button</tabstop>
  </tabstops>
