added profile support in ui

--- a/src/ui/connectiondialog.ui
+++ b/src/ui/connectiondialog.ui
@@ -20,17 +20,34 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
-      <spacer name="horizontalSpacer_4">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Profile</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="profile">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
-      </spacer>
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+       <property name="currentText">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="remove_profile_button">
+       <property name="text">
+        <string>remove</string>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -268,34 +285,14 @@
       </widget>
      </item>
      <item row="9" column="0" colspan="3">
-      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0,5,0">
-       <item>
-        <widget class="QCheckBox" name="save_settings_check_box">
-         <property name="text">
-          <string>Save my settings</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_7">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,5,0">
        <item>
         <widget class="QCheckBox" name="save_key_check_box">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>...and my secret key</string>
+          <string>save secret key</string>
          </property>
          <property name="checked">
           <bool>true</bool>
@@ -404,7 +401,6 @@
   <tabstop>server_executable_line_edit</tabstop>
   <tabstop>select_server_executable_button</tabstop>
   <tabstop>shut_down_server_check_box</tabstop>
-  <tabstop>save_settings_check_box</tabstop>
   <tabstop>save_key_check_box</tabstop>
   <tabstop>load_defaults_button</tabstop>
   <tabstop>ok_button</tabstop>
